portfolio minor fix

--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
         font-size: inherit;
     }
 
+    ul {
+        list-style-type: " -> ";
+    }
+
     .green{
         color: rgb(23, 167, 76);
+    }
+
+    .grey {
+        color: rgb(158, 158, 158);;
     }
 
     #all{
@@ -191,6 +199,10 @@
         font-size: 80%;
         padding-right: 2vw;
     }
+    .text_list > li {
+        list-style-type: "> ";
+    }
+
     .text_title{
         font-size: 125%;
         padding-right: 3px;
@@ -231,6 +243,12 @@
         margin-left: 0px;
         margin-right: 10px;
         /* line-height: 0.1; */
+    }
+
+    .portfolio_end {
+        height: 75px;
+        padding-left: 5%;
+        padding-top: 20px;
     }
 
     #knob{
@@ -305,9 +323,9 @@
                     <h2>About Me</h2>
                     <div class="hr_line1"></div>
                     <p>
-                    Hello, my name is <span class="green">Eliza</span> and I am a design engineer from Poland.
+                    Hello, my name is <i><span class="green">Eli</span></i> and I am a design engineer from Poland.
                     <br/>
-                    I specialise in <span class="green"> CAD design</span>, EDA design, automation and industrial design, game design, but I also dabble in regular programming (HTML-CSS-JS, Python, Java, cpp).
+                    I specialise in <span class="green"> CAD design</span>, EDA design, automation and industrial design, game design, but I also dabble in regular programming (<span class="green">HTML-CSS-JS, Python, Java, cpp</span>).
                     </p>
                     <p>I have a <span class="green">BEng</span> degree in <span class="green">Mechatronics</span> from Technical Univercity of Koszalin.</p>
                     <p>
@@ -371,7 +389,7 @@
                         <a target="_blank" href="robot.html"><img class="portfolio_img" src="img/tank_portfolio_green.png"></a>
                         <div class="portfiolio_text">
                             <h1>Design and construction of a RC tracked vehicle, partially autonomous</h1>
-                            <p>Designing and building a tracked RC vehicle, using <span style="white-space: nowrap;">3d-printing</span> and a laser CNC. Project includes <span style="white-space: nowrap;">CAD design,</span> <span style="white-space: nowrap;">EDA design,</span> software development and more... <a target="_blank" href="robot.html"><i style="white-space: nowrap;">[Click to read more]</i></a></p>
+                            <p>Designing and building a tracked RC vehicle, using <span style="white-space: nowrap;">3d-printing</span> and a laser CNC. Project includes <span style="white-space: nowrap;">CAD design,</span> <span style="white-space: nowrap;">EDA design,</span> software development and more... <a target="_blank" href="robot.html"><i style="white-space: nowrap;">[Click here to read more]</i></a></p>
                         </div>
                     </div>
                     <div class="hr_line1"></div>
@@ -379,7 +397,7 @@
                         <a target="_blank"><img class="portfolio_img" src="img/pocket_PC3.png"></a>
                         <div class="portfiolio_text">
                             <h1>Pocket PC project</h1>
-                            <p>Design and construction of a housing for a personal computer, prepared for transport. The project includes design of a CAD model in Fusion360, fitting it with computer parts and integrating a fully functional screen... <a target="_blank"><i style="white-space: nowrap;">[Click to read more]</i></a></p>
+                            <p>Design and construction of a housing for a personal computer, prepared for transport. The project includes design of a CAD model in Fusion360, fitting it with computer parts and integrating a fully functional screen... <a class="grey" target="_blank"><i style="white-space: nowrap;">[Article comming soon]</i></a></p>
                         </div>
                     </div>
                     <div class="hr_line1"></div>
@@ -387,12 +405,12 @@
                         <a target="_blank"><img class="portfolio_img" src="img/portfolio_chess_bot.png"></a>
                         <div class="portfiolio_text">
                             <h1>ChessBot</h1>
-                            <p>Design of a chess playing robot</p>
+                            <p>Design of a chess playing robot for a student science club <AnyCode>. My part consisted of: mechanical design, CAD design, electronics, automation (how will the code interact with the physical objects via motors etc.) and was part of the process of deciding how the user will interact with the bot... <a class="grey" target="_blank"><i style="white-space: nowrap;">[Article comming soon]</i></a></p>
                         </div>
                     </div>
                     <div class="hr_line1"></div>
-                    <div class="portfolio_item">
-
+                    <div class="portfolio_end">
+                        <span><i>More projects comming soon :3</i></span>
                     </div>
                 </div>
             </div>
