skills minor fix

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 
 <style>
 
+    .dont_touch {
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+    }
+
     a {
         text-decoration: none;
         color: rgb(23, 167, 76);
@@ -302,18 +308,18 @@
 
                 <div class="sw_container">
                     <div class="sw_title_box">
-                        <div id="about_me_div" class="sw_title_div">
+                        <div id="about_me_div" class="sw_title_div dont_touch">
                             <span id="txt1" class="sw_title_text">About me</span><div class="sw_line"></div>
                         </div>
-                        <div id="my_skills_div" class="sw_title_div">
+                        <div id="my_skills_div" class="sw_title_div dont_touch">
                             <span id="txt2" class="sw_title_text">My skills</span><div class="sw_line"></div><div style="width: 15px;"></div>
                         </div>
-                        <div id="portfolio_div" class="sw_title_div">
+                        <div id="portfolio_div" class="sw_title_div dont_touch">
                             <span id="txt3" class="sw_title_text">Portfolio</span><div class="sw_line"></div>
                         </div>
                     </div>
 
-                    <div class="sw_button_box">
+                    <div class="sw_button_box dont_touch">
                         <img id="knob" src="img/sw_4.svg" height="120px">
                     </div>
 
@@ -339,7 +345,7 @@
                         <div class="hr_line1"></div>
                         <ul id="skills">
                             <li><span class="text_title"><i>CAD Mechanical Design</i></span><br><span class="text_list">
-                                I am proficient and expirienced in 3D CAD mechanical design. I have a Dassult Systems certyficate for Mechanical Design in SOLIDWORKS. I also used CAM software in SolidWorks and Fusion360 for CNC milling.
+                                I am proficient and experienced in <span class="green">3D CAD mechanical design</span>. I have a <span class="green">Dassult Systems certificate</span> for Mechanical Design in SOLIDWORKS. I also used CAM software in SolidWorks and Fusion360 for CNC milling.
                             </span><ul class="text_list"><br>
                                 <li>SolidWorks</li>
                                 <li>Fusion360</li>
@@ -348,7 +354,7 @@
                                 <li>FreeCAD</li>
                             </ul></li><br>
                             <li><span class="text_title"><i>Automation systems</i></span><br><span class="text_list">
-                                My automation expirence include PLC and HMI programming, servo controll and electrical design for the automatics system. I am also expirenced with microcontroller systems such as Arduino or ESP32 for hobby porpuses.
+                                My automation experience includes <span class="green">PLC and HMI programming</span>, servo control and electrical design for the automatics systems. I am also experienced with microcontroller systems such as <span class="green">Arduino or ESP32</span>.
                             </span><ul class="text_list"><br>
                                 <li>Programming PLCs</li>
                                 <li>Programming HMIs and integrating it with PLCs</li>
@@ -357,8 +363,7 @@
                                 <li>Desinging PCB boards for the electrical connections</li>
                             </ul></li><br>
                             <li><span class="text_title"><i>Programming</i></span><br><span class="text_list">
-                                I have basic knowlage of programming allowing me to create simple aplications - like this website :) My knowlage also allows me for easer communication with expirenced proggramers, for easyer cooperation in a project.
-                            </span><ul class="text_list"><br>
+                                I have basic knowledge and experience with programming allowing me to create simple applications - like this website :) My knowledge also allows me <span class="green">easily communicate with experienced programmers</span>, for easier cooperation in a project.                            </span><ul class="text_list"><br>
                                 <li>LD, ST</li>
                                 <li>Java</li>
                                 <li>Python</li>
@@ -366,7 +371,7 @@
                                 <li>C/C++</li>
                             </ul></li><br>
                             <li><span class="text_title"><i><b>Photography</b></i></span><br><span class="text_list">
-                                I like to take photos where the composition creates geometrical shapes and patterns. I use an old analog camera - TTL Zenith <i>(made in USSR)</i> with a PENTACON lense. 
+                                I like to take analog and digital photos. I find it fascinating where the composition creates geometrical shapes and patterns, from the objects in the frame. I often use an old analog camera - TTL Zenith <i>made in USSR</i> with a PENTACON lenses <i>made in DDR</i>. 
                             </span></li><br>
                         </ul>
                         
@@ -398,7 +403,7 @@
                         <a target="_blank"><img class="portfolio_img" src="img/pocket_PC3.png"></a>
                         <div class="portfiolio_text">
                             <h1>Pocket PC project</h1>
-                            <p>Design and construction of a housing for a personal computer, prepared for transport. The project includes design of a CAD model in Fusion360, fitting it with computer parts and integrating a fully functional screen... <a class="grey" target="_blank"><i style="white-space: nowrap;">[Article comming soon]</i></a></p>
+                            <p>Design and construction of a housing for a personal computer, prepared for transport and portable usage. The project includes design of a CAD model in Fusion360 and integrating a fully functional screen... <a class="grey" target="_blank"><i style="white-space: nowrap;">[Article comming soon]</i></a></p>
                         </div>
                     </div>
                     <div class="hr_line1"></div>
