--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                                 <li>C/C++</li>
                             </ul></li><br>
                             <li><span class="text_title"><i><b>Photography</b></i></span><br><span class="text_list">
-                                I like to take photos where the composition creates geometrical shapes and patterns. I use an old analog camera - TTL Zenith <i>(made in USSR)</i> with a PENTACON lense. 
+                                I like to take photos where the composition creates geometrical shapes and patterns. I use an old analog camera - TTL <span class="green">ZENIT</span> <i>(made in USSR)</i> with a <span class="green">PENTACON</span> lense. 
                             </span></li><br>
                         </ul>
                         
