--- a/index.html
+++ b/index.html
@@ -292,6 +292,11 @@
     <link href="https://fonts.cdnfonts.com/css/flexi-ibm-vga-false" rel="stylesheet">
 </head>
 <body id="all">
+
+    <audio id="sw_sound1">
+        <source src="img/sw1.ogg" type="audio/ogg">
+    </audio>
+
     <div class="main_container">
         <div class="spacing_bar"></div>
         <div class="content_container">
@@ -424,6 +429,7 @@
         <div class="spacing_bar"></div>
     </div>
     <script>
+        var sw1_sound = document.getElementById("sw_sound1");
         const rf_knob = document.getElementById("knob");
         const rf_txt1 = document.getElementById("txt1");
         const rf_txt2 = document.getElementById("txt2");
@@ -437,7 +443,8 @@
         let i = 0; //color counter
         function counter() {
             n = (n - 1) % 3;
-            console.log(n);
+            //console.log(n);
+            sw1_sound.play();
             // var rot = (n + 1) * 45;
             // rf_knob.style.setProperty("transform", `rotate(${rot}deg)`);
             if(n==0){
