--- a/robot.html
+++ b/robot.html
@@ -3,87 +3,6 @@
 
 <style>
 
-a {
-    text-decoration: none;
-    color: rgb(23, 167, 76);
-    font-size: inherit;
-    }
-
-ul {
-    list-style-type: "> ";
-}
-
-.bordered{
-    border: solid 3px;
-    border-color: white;
-    padding: 5px;
-}
-
-.all{
-    display: flex;
-    flex-direction: row;
-    background-color: black;
-    font-family: 'Flexi IBM VGA False (437)', sans-serif;
-    color: azure;
-}
-
-.spacing_bar{
-    flex-grow: 10;
-}
-
-.content_all{
-    flex-grow: 80;
-    max-width: 850px;
-}
-
-.title_box{
-    /* height: 100px; */
-    display: flex;
-    border: solid 3px;
-    border-color: white;
-    margin-top: 50px;
-    flex-direction: row;
-    height: 70px;
-}
-
-.title_x{
-    background-color: white;
-    width: 3px;
-    height: 50px;
-    /* margin-left: 50%; */
-    /* margin-top: 50%; */
-}
-
-.main_text_box{
-    border: solid 3px;
-    border-color: white;
-    border-top: none;
-    padding-top: 5px;
-    padding-left: 3%;
-    padding-right: 3%;
-}
-
-.img_box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}.img_box > img{
-    min-width: 315px;
-}
-@media (max-width: 750px) {
-    .img_box > span{
-        padding-left: 25px;
-    }
-}
-
-.note_text{
-    /* padding-left: 5%;
-    padding-right: 5%; */
-    text-indent: 40px;
-    color: rgb(163, 163, 163);
-}
-
 #title1{
     display: flex;
     flex-wrap: wrap;
@@ -95,7 +14,7 @@ ul {
 @media (max-width: 750px) {
     #title1{
     font-size: 110%;
-}
+ }
 }
 
 #title_dv1{
@@ -208,6 +127,7 @@ ul {
 </style>
 
 <head>
+    <link rel="stylesheet" href="doc-style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The ROBOT project</title>
@@ -215,7 +135,7 @@ ul {
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tiny5&display=swap" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/flexi-ibm-vga-false" rel="stylesheet">
-    <link rel="shortcut icon" href="img/icon.png" /> 
+    <link rel="shortcut icon" href="img/icon_2.png" /> 
 </head>
 
 <body class="all" id="all">
@@ -345,7 +265,7 @@ ul {
             <div class="img_box">
                 <img id="schemat2" src="img/robot/schemat2.png">
             </div>
-
+            
         </div>
     </div>
     <div class="spacing_bar"></div>
