--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         <a target="_blank" href="comparator.html"><img class="portfolio_img exe_pic" src="img/exe-logo.gif"></a>
                         <div class="portfiolio_text">
                             <h1 class="green"><i>Text comparator app</i></h1>
-                            <p>Web based app for comparing two strings of text...<br><br><a target="_blank" href="robot.html"><i style="white-space: nowrap;">[Click here to run]</i></a></p>
+                            <p>Web based app for comparing two strings of text. Highlights the mismatched characters...<br><br><a target="_blank" href="comparator.html"><i style="white-space: nowrap;">[Click here to run]</i></a></p>
                         </div>
                     </div>
                     <div class="hr_line1"></div>
