--- a/comparator.html
+++ b/comparator.html
@@ -69,37 +69,52 @@
 </head>
 
 <body class="all" id="all">
+    <p class="special">Jak to jest być skrybą, dobrze?
+
+        A, wie pan, moim zdaniem to nie ma tak, że dobrze, albo że niedobrze.
+        Gdybym miał powiedzieć, co cenię w życiu najbardziej, powiedziałbym, że ludzi.
+        Ludzi, którzy podali mi pomocną dłoń, kiedy sobie nie radziłem, kiedy byłem sam,
+        i co ciekawe, to właśnie przypadkowe spotkania wpływają na nasze życie.
+        Chodzi o to, że kiedy wyznaje się pewne wartości, nawet pozornie uniwersalne,
+        bywa, że nie znajduje się zrozumienia, które by tak rzec, które pomaga się nam rozwijać.
+        Ja miałem szczęście, by tak rzec, ponieważ je znalazłem, i dziękuję życiu!
+        Dziękuję mu; życie to śpiew, życie to taniec, życie to miłość!
+        Wielu ludzi pyta mnie o to samo: ale jak ty to robisz, skąd czerpiesz tę radość? A ja odpowiadam, że to proste!
+        To umiłowanie życia. To właśnie ono sprawia, że dzisiaj na przykład buduję maszyny, a jutro – kto wie? Dlaczego by nie – oddam się pracy społecznej i będę, ot, choćby, sadzić... doć— m-marchew...
+        </p>
     <div class="spacing_bar"></div>
-    <div class="content_all">
-        <div class="title_box">
-            <div id="title_dv1">
-                <span id="title1"><span>C:\Portfolio\</span><span>text-comparator.exe</span></span>
-            </div>
-            <div id="title_dv2">
-                <div id="x1" class="title_x" style="transform: rotate(45deg); position: relative;"></div>
-                <div id="x2" class="title_x" style="transform: rotate(-45deg); position: absolute;"></div>
-            </div>
-        </div>
-        <div class="main_text_box">
-            <h2 class="dont_touch">>> INPUT:</h2>
-            <div class="form_box">
-                <div id="box1" class="form_item_box">
-                    <input id="text1" type="text" placeholder=">text 1 ...">
-                    <input id="text2" type="text" placeholder=">text 2 ...">
+    <div>
+        <div class="content_all">
+            <div class="title_box">
+                <div id="title_dv1">
+                    <span id="title1"><span>C:\Portfolio\</span><span>text-comparator.exe</span></span>
                 </div>
-                <div id="box2" class="form_item_box">
-                    <input value="OK" id="ok_button" type="button" onclick="compare()">
+                <div id="title_dv2">
+                    <div id="x1" class="title_x" style="transform: rotate(45deg); position: relative;"></div>
+                    <div id="x2" class="title_x" style="transform: rotate(-45deg); position: absolute;"></div>
                 </div>
             </div>
-            <h2 class="dont_touch"><br>>> OUTPUT:</h2>
-            <div id="lower_box" class="form_out_box bordered">
-                <div id="box3" class="form_item_box">
-                    <span class="green dont_touch">></span><span id="text1_out"></span>
+            <div class="main_text_box">
+                <h2 class="dont_touch">>> INPUT:</h2>
+                <div class="form_box">
+                    <div id="box1" class="form_item_box">
+                        <input id="text1" type="text" placeholder=">text 1 ...">
+                        <input id="text2" type="text" placeholder=">text 2 ...">
+                    </div>
+                    <div id="box2" class="form_item_box">
+                        <input value="OK" id="ok_button" type="button" onclick="compare()">
+                    </div>
                 </div>
-                <div id="box4" class="form_item_box">
-                    <span class="green dont_touch">></span><span id="text2_out"></span>
-                </div>
-            </div>    
+                <h2 class="dont_touch"><br>>> OUTPUT:</h2>
+                <div id="lower_box" class="form_out_box bordered">
+                    <div id="box3" class="form_item_box">
+                        <span class="green dont_touch">></span><span id="text1_out"></span>
+                    </div>
+                    <div id="box4" class="form_item_box">
+                        <span class="green dont_touch">></span><span id="text2_out"></span>
+                    </div>
+                </div>    
+            </div>
         </div>
     </div>
     <div class="spacing_bar"></div>
