--- a/robot.html
+++ b/robot.html
@@ -859,15 +859,17 @@
             <p>This seemed to fix the <i>shitty sensor issue</i>.</p>
             <p>Other problem I had was with the magnetometer. The robot makes 90° turns based on its readings, BUT if the readings are shitty, the turns are just random. Sometimes it would turn endlessly, stuck like ants stuck in an ant mill, doomed to drain the battery and die (st00pid).</p>
             <p>This happened because the workshop I was at had a lot of high power electronic equipment, and it created LOTS of magnetic noise. When I went outside and tested the turning, everything seemed fine.</p>
-            <p>I did not find a good fix for that, besides using timed turning or changing to a different type of sensor. At the end, I used the timed turning inside the workshop. It worked good enough. I also added a simple function that would correct the robots path, if it would get to close or to far away from the wall. </p>
+            <p>I did not find a good fix for that, besides using timed turning or changing to a different type of sensor. At the end, I used the timed turning inside the workshop. It worked good enough. I also added a simple function that would correct the robots path, if it would get too close or too far away from the wall. </p>
             <div class="img_box">
                 <img class="bordered" style="width: 70%;" src="img/robot/rys_robot_go.png">
+                <span class="note_text"><i>Photo sequence of how the robot drives in auto mode.</i></span>
             </div>
             <p>So, with these issues delt with, it worked. Mapped the track well and detected all the walls :3</p>
             <br>
             <p>To check the manual drive part, I just took it outside to touch some grass, as the guy was a basement dweller ever since it was assembled :P </p>
             <div class="img_box">
                 <img class="bordered" style="width: 70%;" src="img/robot/rys_robot_teren.png">
+                <span class="note_text"><i>The robot in its natural environment.</i></span>
             </div>
             <p>I think it liked the grass :3</p>
         </div>
