--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <p>
                     Hello, my name is <i><span class="green">Eli</span></i> and I am a design engineer from Poland.
                     <br/>
-                    I specialise in <span class="green"> CAD design</span>, EDA design, automation and industrial design, game design, but I also dabble in regular programming (<span class="green">HTML-CSS-JS, Python, Java, cpp</span>).
+                    I specialise in <span class="green"> CAD design</span>, EDA design, automation industrial and game design, but I also dabble in regular programming (<span class="green">HTML-CSS-JS, Python, Java, cpp</span>).
                     </p>
                     <p>I have a <span class="green">BEng</span> degree in <span class="green">Mechatronics</span> from Technical Univercity of Koszalin.</p>
                     <p>
